--- a/index.html
+++ b/index.html
@@ -5,25 +5,14 @@
 		<link rel = "stylesheet" type = "text/css" href = "style.css" />
 	</head>
 	<body>
-	<div id = "container">
-		<div id = "top-bar">
+	<div id = "top-bar">
 			<div id = "logins">
 				<ul>
 					<li><a class = "selected" href = ""><img src="buttons/register.png" width=50 alt="Register"/></a></li>
 					<li><a class = "selected" href = ""><img src="buttons/login.png" width=50 alt="Login"/></a></li>
+					<li><a href = "https://www.youtube.com/channel/UCLnDDmhZQ4WCf2m6fYav8PQ"><img src="buttons/youtube-icon.png" width=25 alt="YouTube Channel"/></a></li>
 				</ul>
 			</div>
-			<div id = "social-links">
-				<a href = "https://www.youtube.com/channel/UCLnDDmhZQ4WCf2m6fYav8PQ"><img src="buttons/youtube-icon.png" width=25 alt="YouTube Channel"/></a>
-			</div>
-		</div>
-		<div id = "header"> 
-			
-			<img src="images/Banner-2-crop.png" width=1000 height=200 alt="The Banner"/>
-		</div>
-		
-		<div id = "content">
-
 			<div id = "navigation">
 				<ul>
 					<li><a class = "selected" href = "index.html">   Home  </a></li>
@@ -35,25 +24,29 @@
 					<li><a class = "selected" href = "contact.html">   Contact   </a></li>
 				</ul>
 			</div>
+	</div>
+	<div class="parallax"></div>
+	<div class = "container">	
+		<!-<div id = "content">
 
 			<div id = "main">
+				<h3 style="color:white"> Most Recent Video </h3>
 				<div class="mainVideo">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/i_02s4YZEzU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				</div>
-				<div class="nextVideos">
-					<h5> Most Recent Videos </h5>
-					<ul>
-						<li> <button> Next </button></li>
-						<li> Mext </li>
-					</ul>
+				<iframe width="1080" height="720" src="https://www.youtube.com/embed/i_02s4YZEzU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				</div>
 			</div>
 			
-		</div>
+		<!-</div>
+	</div>
 
-		<div id = "footer">
+	<div class = "playthrough_banner">
+				<img src="images/rime_front_banner.png" alt="Rime Banner">
+					  <p>RiME is a single-player puzzle adventure game about a young boy shipwrecked on a mysterious island after a torrential storm. Players must use their wits to decipher the challenges and secrets of an expansive world strewn with rugged terrain, wild creatures and the crumbling ruins of a long-forgotten civilization. With subtle narrative, colorful artwork and a sweeping score, RiME offers players a meaningful journey filled with discovery. </p>
+				
+	</div>
+
+	<div id = "footer">
 			<p> Copyright &copy; Mohammed Samad </p>
-		</div>
 	</div>
 	</body>
 
