--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 				<ul>
 					<li><a class = "selected" href = "index.html">   Home  </a></li>
 				
-					<li><a class = "selected" href = "about.html">   About  </a></li>
+					<li><a class = "selected" href = "">   About  </a></li>
 				
-					<li><a class = "selected" href = "playthrough.html">   Playthroughs  </a></li>
+					<li><a class = "selected" href = "">   Playthroughs  </a></li>
 			
-					<li><a class = "selected" href = "contact.html">   Contact   </a></li>
+					<li><a class = "selected" href = "">   Contact   </a></li>
 				</ul>
 			</div>
 	</div>
